--- a/index.html
+++ b/index.html
@@ -10,6 +10,64 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="Ali-main">
+        <div class="Ali-center">
+            <div class="Ali-User">
+                <div class="Ali-navad">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="ali-us">
+                        <p>90+</p>
+                        <p>Users</p>
+                    </div>
+                </div>
+                <div class="Ali-si">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <div class="ali-us">
+                        <p>30+</p>
+                        <p>Users</p>
+                    </div>
+                </div>
+                <div class="Ali-panj">
+                    <i class="fa-solid fa-server"></i>
+                    <div class="ali-us">
+                        <p>50+</p>
+                        <p>Users</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Ali-img_tex">
+       <div class="Ali-center">
+
+       <div class="Ali-TEXT">
+        <div class="Ali-left">
+            <img src="./images/Ali-img.png" alt="">
+        </div>
+        <div class="Ali-right">
+           <div class="Ali-right2">
+            <h1>We Provide Many Features You Can Use</h1>
+            <p class="ALI_p">You can explore the features that we provide with fun and have their own functions each feature.</p>
+            <div class="Ali-pow">
+                <img src="./images/Ali-Vector.png" alt="">
+                <p>Powerfull online protection.</p>
+            </div>
+            <div class="Ali-pow">
+                <img src="./images/Ali-Vector.png" alt="">
+                <p>Internet without borders.</p>
+            </div>
+            <div class="Ali-pow">
+                <img src="./images/Ali-Vector.png" alt="">
+                <p>Supercharged VPN.</p>
+            </div>
+            <div class="Ali-pow">
+                <img src="./images/Ali-Vector.png" alt="">
+                <p>No specific time limits.</p>
+            </div>
+           </div>
+        </div>
+       </div>
+       </div>
+    </div>
 </body>
 </html>
