--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./all.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="XM-container">
+      <div class="XM-center">
+        <div class="XM-first">
+          <div class="XM-navbar">
+            <div class="XM-lasles">
+              <img src="./images/VectorXM-icon.png" alt="" />
+              <h1>Lasles <b>VPN</b></h1>
+            </div>
+            <div class="XM-features">
+              <ul>
+                <li><a href="">About</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Help</a></li>
+              </ul>
+            </div>
+            <div class="XM-buttons">
+              <p>Sign In</p>
+              <button>Sign Up</button>
+            </div>
+          </div>
+          <div class="XM-vpn">
+            <div class="XM-left">
+              <h1>Want anything to be easy with <b>LaslesVPN.</b></h1>
+              <p>
+                Provide a network for all your needs with ease and fun using
+                LaslesVPN discover interesting features from us.
+              </p>
+              <button>Get Started</button>
+            </div>
+            <div class="XM-right">
+              <img src="./images/Illustration 1XM-girl.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
